--- a/eng/Versions.props
+++ b/eng/Versions.props
@@ -4,8 +4,8 @@
     <Import Project="MainVersion.props" />
     
     <PropertyGroup>
-        <MyProductVersion>$(MainVersion)$(PackageVersionSuffix)</MyProductVersion>
-        <MyProductAssemblyVersion>$(MainVersion)</MyProductAssemblyVersion>
+        <MetalamaMigrationVersion>$(MainVersion)$(PackageVersionSuffix)</MetalamaMigrationVersion>
+        <MetalamaMigrationAssemblyVersion>$(MainVersion)</MetalamaMigrationAssemblyVersion>
     </PropertyGroup>
 
     
@@ -19,8 +19,8 @@
     <Import Project="Versions.g.props" Condition="Exists('Versions.g.props')" />
 
     <PropertyGroup>
-        <AssemblyVersion>$(MyProductAssemblyVersion)</AssemblyVersion>
-        <Version>$(MyProductVersion)</Version>
+        <AssemblyVersion>$(MetalamaMigrationAssemblyVersion)</AssemblyVersion>
+        <Version>$(MetalamaMigrationVersion)</Version>
     </PropertyGroup>
 
 </Project>
