--- a/src/Metalama.Migration/Metalama.Migration.csproj
+++ b/src/Metalama.Migration/Metalama.Migration.csproj
@@ -7,6 +7,7 @@
         <Nullable>disable</Nullable>
         <RootNamespace>PostSharp</RootNamespace>
         <GenerateDocumentationFile>True</GenerateDocumentationFile>
+        <NoWarn>CS1591;CS0659;CS0660;CS0661</NoWarn>
     </PropertyGroup>
 
     <ItemGroup>
