--- a/eng/Versions.props
+++ b/eng/Versions.props
@@ -12,8 +12,9 @@
     
     <!-- Set the default versions of dependencies -->
     <PropertyGroup>
-        <PostSharpEngineeringVersion>1.0.100-preview</PostSharpEngineeringVersion>
+        <PostSharpEngineeringVersion>1.0.101-preview</PostSharpEngineeringVersion>
 		<MetalamaVersion>branch:master</MetalamaVersion>
+		<MetalamaVersion Condition="$(VcsBranch.StartsWith('master'))">0.5.52-preview</MetalamaVersion>
     </PropertyGroup>
 
     <!-- Override versions (both this product and dependencies) for the local build -->
