--- a/eng/Versions.props
+++ b/eng/Versions.props
@@ -15,6 +15,8 @@
         <PostSharpEngineeringVersion>1.0.101-preview</PostSharpEngineeringVersion>
 		<MetalamaVersion>branch:master</MetalamaVersion>
 		<MetalamaVersion Condition="$(VcsBranch.StartsWith('master'))">0.5.55-preview</MetalamaVersion>
+        <MetalamaExtensionsVersion>branch:master</MetalamaExtensionsVersion>
+		<MetalamaExtensionsVersion Condition="$(VcsBranch.StartsWith('master'))">0.5.55-preview</MetalamaExtensionsVersion>
     </PropertyGroup>
 
     <!-- Override versions (both this product and dependencies) for the local build -->
