--- a/src/Metalama.Migration/Metalama.Migration.csproj
+++ b/src/Metalama.Migration/Metalama.Migration.csproj
@@ -14,7 +14,8 @@
 
     <ItemGroup>
         <PackageReference Include="Metalama.Framework.Redist" Version="$(MetalamaVersion)" />
-        <PackageReference Include="Metalama.Extensions.Multicast" Version="$(MetalamaExtensionsVersion)"  />
+        <PackageReference Include="Metalama.Extensions.Multicast" Version="$(MetalamaExtensionsVersion)" />
+        <PackageReference Include="Metalama.Extensions.Architecture" Version="$(MetalamaExtensionsVersion)" />
     </ItemGroup>
 
     <ItemGroup>
