--- a/eng/Versions.props
+++ b/eng/Versions.props
@@ -17,6 +17,8 @@
 		<MetalamaVersion Condition="$(VcsBranch)!=''">branch:master</MetalamaVersion>
         <MetalamaExtensionsVersion>0.5.80-preview</MetalamaExtensionsVersion>
 		<MetalamaExtensionsVersion Condition="$(VcsBranch)!=''">branch:dev</MetalamaExtensionsVersion>
+		<MetalamaCompilerVersion>4.4.1014-preview</MetalamaCompilerVersion>
+		<MetalamaCompilerVersion Condition="$(VcsBranch)!=''">branch:master</MetalamaCompilerVersion>
     </PropertyGroup>
 
     <!-- Override versions (both this product and dependencies) for the local build -->
