--- a/eng/Versions.props
+++ b/eng/Versions.props
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+
 <Project>
 
     <!-- Set the default version of the current product -->
@@ -13,9 +13,9 @@
     <!-- Set the default versions of dependencies -->
     <PropertyGroup>
         <PostSharpEngineeringVersion>2023.2.24</PostSharpEngineeringVersion>
-        <MetalamaVersion></MetalamaVersion>
-        <MetalamaExtensionsVersion></MetalamaExtensionsVersion>
-        <MetalamaCompilerVersion></MetalamaCompilerVersion>
+        <MetalamaVersion>2023.2.1-preview</MetalamaVersion>
+        <MetalamaExtensionsVersion>2023.2.1-preview</MetalamaExtensionsVersion>
+        <MetalamaCompilerVersion>2023.2.1-preview</MetalamaCompilerVersion>
     </PropertyGroup>
 
     <!-- Override versions (both this product and dependencies) for the local build -->
