--- a/eng/Versions.props
+++ b/eng/Versions.props
@@ -13,9 +13,9 @@
     <!-- Set the default versions of dependencies -->
     <PropertyGroup>
         <PostSharpEngineeringVersion>2023.2.24</PostSharpEngineeringVersion>
-        <MetalamaVersion>2023.2.1-preview</MetalamaVersion>
-        <MetalamaExtensionsVersion>2023.2.1-preview</MetalamaExtensionsVersion>
-        <MetalamaCompilerVersion>2023.2.1-preview</MetalamaCompilerVersion>
+        <MetalamaVersion>2023.2.2-rc</MetalamaVersion>
+        <MetalamaExtensionsVersion>2023.2.2-rc</MetalamaExtensionsVersion>
+        <MetalamaCompilerVersion>2023.2.2-rc</MetalamaCompilerVersion>
     </PropertyGroup>
 
     <!-- Override versions (both this product and dependencies) for the local build -->
