--- a/eng/AutoUpdatedVersions.props
+++ b/eng/AutoUpdatedVersions.props
@@ -1,10 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+
 <Project>
 
     <PropertyGroup>
-        <MetalamaVersion>2023.3.0-preview</MetalamaVersion>
-        <MetalamaExtensionsVersion>2023.3.0-preview</MetalamaExtensionsVersion>
-        <MetalamaCompilerVersion>2023.3.0-preview</MetalamaCompilerVersion>
-    </PropertyGroup>
+        <MetalamaVersion>2023.3.1-preview</MetalamaVersion>
+        <MetalamaExtensionsVersion>2023.3.1-preview</MetalamaExtensionsVersion>
+        <MetalamaCompilerVersion>2023.3.1-preview</MetalamaCompilerVersion>
+    <MetalamaBackstageVersion>2023.3.1-preview</MetalamaBackstageVersion></PropertyGroup>
 
 </Project>
