--- a/eng/AutoUpdatedVersions.props
+++ b/eng/AutoUpdatedVersions.props
@@ -1,10 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+
 <Project>
 
     <PropertyGroup>
-        <MetalamaVersion></MetalamaVersion>
-        <MetalamaExtensionsVersion></MetalamaExtensionsVersion>
-        <MetalamaCompilerVersion></MetalamaCompilerVersion>
-    </PropertyGroup>
+        <MetalamaVersion>2023.2.3-rc</MetalamaVersion>
+        <MetalamaExtensionsVersion>2023.2.3-rc</MetalamaExtensionsVersion>
+        <MetalamaCompilerVersion>2023.2.3-rc</MetalamaCompilerVersion>
+    <MetalamaBackstageVersion>2023.2.3-rc</MetalamaBackstageVersion></PropertyGroup>
 
 </Project>
