--- a/eng/AutoUpdatedVersions.props
+++ b/eng/AutoUpdatedVersions.props
@@ -2,9 +2,9 @@
 <Project>
 
     <PropertyGroup>
-        <MetalamaVersion>2023.2.3-rc</MetalamaVersion>
-        <MetalamaExtensionsVersion>2023.2.3-rc</MetalamaExtensionsVersion>
-        <MetalamaCompilerVersion>2023.2.3-rc</MetalamaCompilerVersion>
-    <MetalamaBackstageVersion>2023.2.3-rc</MetalamaBackstageVersion></PropertyGroup>
+        <MetalamaVersion>2023.2.4</MetalamaVersion>
+        <MetalamaExtensionsVersion>2023.2.4</MetalamaExtensionsVersion>
+        <MetalamaCompilerVersion>2023.2.4</MetalamaCompilerVersion>
+    <MetalamaBackstageVersion>2023.2.4</MetalamaBackstageVersion></PropertyGroup>
 
 </Project>
