--- a/eng/AutoUpdatedVersions.props
+++ b/eng/AutoUpdatedVersions.props
@@ -2,9 +2,10 @@
 <Project>
 
     <PropertyGroup>
-        <MetalamaVersion>2023.3.2-preview</MetalamaVersion>
-        <MetalamaExtensionsVersion>2023.3.2-preview</MetalamaExtensionsVersion>
-        <MetalamaCompilerVersion>2023.3.2-preview</MetalamaCompilerVersion>
-    <MetalamaBackstageVersion>2023.3.1-preview</MetalamaBackstageVersion></PropertyGroup>
+        <MetalamaBackstageVersion></MetalamaBackstageVersion>
+        <MetalamaCompilerVersion></MetalamaCompilerVersion>
+        <MetalamaVersion></MetalamaVersion>
+        <MetalamaExtensionsVersion></MetalamaExtensionsVersion>
+    </PropertyGroup>
 
 </Project>
