--- a/eng/AutoUpdatedVersions.props
+++ b/eng/AutoUpdatedVersions.props
@@ -2,9 +2,9 @@
 <Project>
 
     <PropertyGroup>
-        <MetalamaVersion>2023.3.4-preview</MetalamaVersion>
-        <MetalamaExtensionsVersion>2023.3.4-preview</MetalamaExtensionsVersion>
-        <MetalamaCompilerVersion>2023.3.4-preview</MetalamaCompilerVersion>
-    <MetalamaBackstageVersion>2023.3.3-preview</MetalamaBackstageVersion></PropertyGroup>
+        <MetalamaVersion>2023.3.5-rc</MetalamaVersion>
+        <MetalamaExtensionsVersion>2023.3.5-rc</MetalamaExtensionsVersion>
+        <MetalamaCompilerVersion>2023.3.5-rc</MetalamaCompilerVersion>
+    <MetalamaBackstageVersion>2023.3.5-rc</MetalamaBackstageVersion></PropertyGroup>
 
 </Project>
