--- a/eng/AutoUpdatedVersions.props
+++ b/eng/AutoUpdatedVersions.props
@@ -2,10 +2,10 @@
 <Project>
 
     <PropertyGroup>
-        <MetalamaBackstageVersion></MetalamaBackstageVersion>
-        <MetalamaCompilerVersion></MetalamaCompilerVersion>
-        <MetalamaVersion></MetalamaVersion>
-        <MetalamaExtensionsVersion></MetalamaExtensionsVersion>
+        <MetalamaBackstageVersion>2023.4.1-preview</MetalamaBackstageVersion>
+        <MetalamaCompilerVersion>2023.4.1-preview</MetalamaCompilerVersion>
+        <MetalamaVersion>2023.4.1-preview</MetalamaVersion>
+        <MetalamaExtensionsVersion>2023.4.1-preview</MetalamaExtensionsVersion>
     </PropertyGroup>
 
 </Project>
