--- a/eng/AutoUpdatedVersions.props
+++ b/eng/AutoUpdatedVersions.props
@@ -2,9 +2,9 @@
 <Project>
 
     <PropertyGroup>
-        <MetalamaVersion>2023.3.7-rc</MetalamaVersion>
-        <MetalamaExtensionsVersion>2023.3.7-rc</MetalamaExtensionsVersion>
-        <MetalamaCompilerVersion>2023.3.7-rc</MetalamaCompilerVersion>
-    <MetalamaBackstageVersion>2023.3.7-rc</MetalamaBackstageVersion></PropertyGroup>
+        <MetalamaVersion>2023.3.8</MetalamaVersion>
+        <MetalamaExtensionsVersion>2023.3.8</MetalamaExtensionsVersion>
+        <MetalamaCompilerVersion>2023.3.8</MetalamaCompilerVersion>
+    <MetalamaBackstageVersion>2023.3.8</MetalamaBackstageVersion></PropertyGroup>
 
 </Project>
