--- a/eng/AutoUpdatedVersions.props
+++ b/eng/AutoUpdatedVersions.props
@@ -2,10 +2,10 @@
 <Project>
 
     <PropertyGroup>
-        <MetalamaBackstageVersion>2023.4.4-preview</MetalamaBackstageVersion>
-        <MetalamaCompilerVersion>2023.4.4-preview</MetalamaCompilerVersion>
-        <MetalamaVersion>2023.4.4-preview</MetalamaVersion>
-        <MetalamaExtensionsVersion>2023.4.4-preview</MetalamaExtensionsVersion>
-    <MetalamaFrameworkRunTimeVersion>2023.4.1-preview</MetalamaFrameworkRunTimeVersion></PropertyGroup>
+        <MetalamaBackstageVersion>2023.4.5-rc</MetalamaBackstageVersion>
+        <MetalamaCompilerVersion>2023.4.5-rc</MetalamaCompilerVersion>
+        <MetalamaVersion>2023.4.5-rc</MetalamaVersion>
+        <MetalamaExtensionsVersion>2023.4.5-rc</MetalamaExtensionsVersion>
+    <MetalamaFrameworkRunTimeVersion>2023.4.2-rc</MetalamaFrameworkRunTimeVersion></PropertyGroup>
 
 </Project>
