--- a/eng/AutoUpdatedVersions.props
+++ b/eng/AutoUpdatedVersions.props
@@ -2,10 +2,10 @@
 <Project>
 
     <PropertyGroup>
-        <MetalamaBackstageVersion>2024.0.3-preview</MetalamaBackstageVersion>
-        <MetalamaCompilerVersion>2024.0.3-preview</MetalamaCompilerVersion>
-        <MetalamaVersion>2024.0.3-preview</MetalamaVersion>
-        <MetalamaExtensionsVersion>2024.0.3-preview</MetalamaExtensionsVersion>
-    <MetalamaFrameworkRunTimeVersion>2024.0.3-preview</MetalamaFrameworkRunTimeVersion></PropertyGroup>
+        <MetalamaBackstageVersion>2024.0.4-rc</MetalamaBackstageVersion>
+        <MetalamaCompilerVersion>2024.0.4-rc</MetalamaCompilerVersion>
+        <MetalamaVersion>2024.0.4-rc</MetalamaVersion>
+        <MetalamaExtensionsVersion>2024.0.4-rc</MetalamaExtensionsVersion>
+    <MetalamaFrameworkRunTimeVersion>2024.0.4-rc</MetalamaFrameworkRunTimeVersion></PropertyGroup>
 
 </Project>
