--- a/eng/AutoUpdatedVersions.props
+++ b/eng/AutoUpdatedVersions.props
@@ -2,10 +2,11 @@
 <Project>
 
     <PropertyGroup>
-        <MetalamaBackstageVersion>2024.0.4-rc</MetalamaBackstageVersion>
-        <MetalamaCompilerVersion>2024.0.4-rc</MetalamaCompilerVersion>
-        <MetalamaVersion>2024.0.4-rc</MetalamaVersion>
-        <MetalamaExtensionsVersion>2024.0.4-rc</MetalamaExtensionsVersion>
-    <MetalamaFrameworkRunTimeVersion>2024.0.4-rc</MetalamaFrameworkRunTimeVersion></PropertyGroup>
+        <MetalamaBackstageVersion></MetalamaBackstageVersion>
+        <MetalamaCompilerVersion></MetalamaCompilerVersion>
+        <MetalamaVersion></MetalamaVersion>
+        <MetalamaExtensionsVersion></MetalamaExtensionsVersion>
+        <MetalamaFrameworkRunTimeVersion></MetalamaFrameworkRunTimeVersion>
+    </PropertyGroup>
 
 </Project>
