--- a/eng/AutoUpdatedVersions.props
+++ b/eng/AutoUpdatedVersions.props
@@ -2,10 +2,10 @@
 <Project>
 
     <PropertyGroup>
-        <MetalamaBackstageVersion>2024.0.5-rc</MetalamaBackstageVersion>
-        <MetalamaCompilerVersion>2024.0.5-rc</MetalamaCompilerVersion>
-        <MetalamaVersion>2024.0.5-rc</MetalamaVersion>
-        <MetalamaExtensionsVersion>2024.0.5-rc</MetalamaExtensionsVersion>
-    <MetalamaFrameworkRunTimeVersion>2024.0.5-rc</MetalamaFrameworkRunTimeVersion></PropertyGroup>
+        <MetalamaBackstageVersion>2024.0.6</MetalamaBackstageVersion>
+        <MetalamaCompilerVersion>2024.0.6</MetalamaCompilerVersion>
+        <MetalamaVersion>2024.0.6</MetalamaVersion>
+        <MetalamaExtensionsVersion>2024.0.6</MetalamaExtensionsVersion>
+    <MetalamaFrameworkRunTimeVersion>2024.0.6</MetalamaFrameworkRunTimeVersion></PropertyGroup>
 
 </Project>
