--- a/eng/AutoUpdatedVersions.props
+++ b/eng/AutoUpdatedVersions.props
@@ -2,11 +2,11 @@
 <Project>
 
     <PropertyGroup>
-        <MetalamaBackstageVersion></MetalamaBackstageVersion>
-        <MetalamaCompilerVersion></MetalamaCompilerVersion>
-        <MetalamaVersion></MetalamaVersion>
-        <MetalamaExtensionsVersion></MetalamaExtensionsVersion>
-        <MetalamaFrameworkRunTimeVersion></MetalamaFrameworkRunTimeVersion>
+        <MetalamaBackstageVersion>2024.2.1-preview</MetalamaBackstageVersion>
+        <MetalamaCompilerVersion>2024.2.1-preview</MetalamaCompilerVersion>
+        <MetalamaVersion>2024.2.1-preview</MetalamaVersion>
+        <MetalamaExtensionsVersion>2024.2.1-preview</MetalamaExtensionsVersion>
+        <MetalamaFrameworkRunTimeVersion>2024.2.1-preview</MetalamaFrameworkRunTimeVersion>
     </PropertyGroup>
 
 </Project>
