--- a/eng/AutoUpdatedVersions.props
+++ b/eng/AutoUpdatedVersions.props
@@ -2,11 +2,11 @@
 <Project>
 
     <PropertyGroup>
-        <MetalamaBackstageVersion>2024.1.10-rc</MetalamaBackstageVersion>
-        <MetalamaCompilerVersion>2024.1.6-rc</MetalamaCompilerVersion>
-        <MetalamaVersion>2024.1.11-rc</MetalamaVersion>
-        <MetalamaExtensionsVersion>2024.1.11-rc</MetalamaExtensionsVersion>
-        <MetalamaFrameworkRunTimeVersion>2024.1.3-rc</MetalamaFrameworkRunTimeVersion>
+        <MetalamaBackstageVersion>2024.1.11</MetalamaBackstageVersion>
+        <MetalamaCompilerVersion>2024.1.7</MetalamaCompilerVersion>
+        <MetalamaVersion>2024.1.12</MetalamaVersion>
+        <MetalamaExtensionsVersion>2024.1.12</MetalamaExtensionsVersion>
+        <MetalamaFrameworkRunTimeVersion>2024.1.4</MetalamaFrameworkRunTimeVersion>
     </PropertyGroup>
 
 </Project>
