--- a/src/Metalama.Migration.Transformer/Metalama.Migration.Transformer.csproj
+++ b/src/Metalama.Migration.Transformer/Metalama.Migration.Transformer.csproj
@@ -6,7 +6,7 @@
     </PropertyGroup>
     
     <ItemGroup>
-        <PackageReference Include="Metalama.Compiler.Sdk" Version="$(MetalamaCompilerVersion)" />
+        <PackageReference Include="Metalama.Compiler.Sdk" />
     </ItemGroup>
 
 </Project>
