--- a/eng/AutoUpdatedVersions.props
+++ b/eng/AutoUpdatedVersions.props
@@ -2,11 +2,11 @@
 <Project>
 
     <PropertyGroup>
-        <MetalamaBackstageVersion>2024.2.10-preview</MetalamaBackstageVersion>
-        <MetalamaCompilerVersion>2024.2.6-preview</MetalamaCompilerVersion>
-        <MetalamaVersion>2024.2.12-preview</MetalamaVersion>
-        <MetalamaExtensionsVersion>2024.2.12-preview</MetalamaExtensionsVersion>
-        <MetalamaFrameworkRunTimeVersion>2024.2.3-preview</MetalamaFrameworkRunTimeVersion>
+        <MetalamaBackstageVersion>2024.2.11-rc</MetalamaBackstageVersion>
+        <MetalamaCompilerVersion>2024.2.7-rc</MetalamaCompilerVersion>
+        <MetalamaVersion>2024.2.13-rc</MetalamaVersion>
+        <MetalamaExtensionsVersion>2024.2.13-rc</MetalamaExtensionsVersion>
+        <MetalamaFrameworkRunTimeVersion>2024.2.4-rc</MetalamaFrameworkRunTimeVersion>
     </PropertyGroup>
 
 </Project>
